# SWCompiler

./: CMakeLists.txt  reformat.sh
cmake/external_libs/: protobuf.cmake
include/: SWC.h
src/: SWDSL.h  SWLOG.h  common.h
src/codegen/: CUDACodegen.cpp  CUDACodegen.h  Codegen.cpp  Codegen.h  ParallelCodegen.cpp
src/codegen/utils/: DataLoader.cpp  cudaWrapper.h  cuda_kernels.h  kernels.h  ringAllreduce.h
src/diff/: AutoDiff.cpp
src/engine/: Engine.cpp  Engine.h
src/graphIR/: IRGraph.cpp  IRGraph.h  IRNode.h  OpNode.cpp  OpNode.h  TensorNode.cpp  TensorNode.h
src/importer/: Caffe2Importer.cpp
src/op/: Op.cpp  Op.h  OpCost.cpp  comSizeModel.cpp  comSizeModel.h
src/op/basicOp/: basicOps.h
src/op/dlOp/: dlOp.cpp  dlOp.h  dlOpAD.cpp  dlOpEinsum.cpp  dlOpInfo.cpp  dlOpLowering.cpp
src/op/tensorOp/: tensorOps.cpp  tensorOps.h
src/parallel/: DecideStrategy.h  ParallelPattern.h  SearchSpace.cpp  SearchSpace.h  TilingLabel.h  parallelGen.cpp  parallelGen.h
src/pass/: AutodiffPass.cpp  AutodiffPass.h  CommSavingParaLoweringPass.cpp  Label.h  LoweringPass.h  ParallelLabelingPass.h  ParallelLoweringPass.h
src/tensor/: tensor.cpp  tensor.h
test/: testConvnet.cpp  testMLP.cpp  testMNist.cpp  testParallelPattern.cpp  testSnapshot.cpp
test/benchmark/: MLP2.cpp  MLP3.cpp  alexnet.cpp  alexnetGPU.cpp  benchParallelLowering.cpp  lenetga.cpp  vgg19fused.cpp  vgg19ga.cpp
test/engine/: resnet.cpp  testEngineLenetDistTrain.cpp  testEngineMLPDistInfer.cpp  testEngineMLPDistTrain.cpp  testEngineMLPInfer.cpp  testResidual.cpp  testUtils.cpp
test/graph/: alexnet_cifar.cpp  alexnet_imagenet.cpp  mnist_autoencoder.cpp  resnet18_imagenet.cpp  wide_resnet.cpp
test/importer/: testLeNetImport.cpp  testResnetImport.cpp  testVGG19Import.cpp
test/old/: testMPI.cpp  testParaMLPTraining.cpp  testTraining.cpp
test/parallel/: testJointGraph.cpp  testLenetDistTrain.cpp  testMLPDistTrain.cpp  testParallelInfer.cpp  testParallelInferStrategyB.cpp  testParallelInferStrategyC.cpp  testParallelInferStrategyD.cpp
test/rnn/: lstm.cpp  naiveRNN.cpp  testRNN.cpp
